# amigawars

./: .gitignore  CMakeLists.txt  bartman-toolchain.cmake  bebbo-toolchain.cmake  common-toolchain.cmake
resources/: for.gpl
src/: actions.c  actions.h  bob_new.c  game.c  map.h  units.c  units.h
wip/: astar.c  binary_heap.c  binary_heap.h  jump_point_search.c
